2007-12-05  Julian Lamb
	* src/gerber.c,src/drill.h,src/gerb_image.h: Fix memory corruption issue
	  with G54 codes not checking if aperture numbers were within bounds (bug
	  #1843983). Also, bumped up max aperture number from 999 to 9999 based on
	  reports of some CAD packages using numbers this hig (even though it
	  clearly says 999 is the highest number in the RS274X spec). This will
	  increase memory usage somewhat, but hopefully should be acceptable.

2007-12-05  Julian Lamb
	* src/drill.c: Fix parsing of drill files with commas in
	  place of decimals (bug #1844100).

2007-12-05  Julian Lamb
	* src/draw.c,src/draw-gtk.c: Fix rendering of lines drawn with rectangular 
	  aperatures (bug #1834944 and #1704942). Thanks to ineiev for the gdk
	  patch, which was reworked to apply to the cairo rendering too.
	  
2007-12-04  Julian Lamb
	* src/callbacks.[ch],src/interface.[ch]: Rename GTK widgets to more
	  recognizable names for better code legibility. Change sidebar to a
	  notebook view and add a messages tab. Organize statusbar layout. Add
	  "analyze" menu and move CAM related functions to it. Clean up toolbars
	  and combine into a single toolbar.
	  
2007-11-30  Julian Lamb
	* src/callbacks.[ch],src/interface.[ch],src/gerbv.c: Split out all gui
	  code out of gerbv.c and put it into the standard callbacks/interface
	  files. Started to overhaul gui during the process. Also, speed up the
	  feel of the cairo rendering by rendering layers to a cairo_pattern_t,
	  then compositing using these patterns. This allows the user to pan and
	  get much quicker response while the CPU renders the new view in the
	  background.

2007-11-30  Stuart Brorson sdb (at) cloud9 (dot) net
	*  configure.in, src/exportimage.c, src/gerbv.c,
	src/pick-and-place.c:
	Modify build system so you must explicitly --enable-cairo to
	build using cairo, otherwise build using GDK by default.
	
2007-11-29  Stuart Brorson sdb (at) cloud9 (dot) net